# fastapi-sidebar

./: .gitignore  BUILDME.rst  pyproject.toml  setup.cfg
app/: main.py
app/routers/: raw_netscape.py  twoforms.py  unsplash.py
static/html/: example.html
templates/include/: topnav.html
tests/: test_main.py
