[tool.poetry]
name = "fastapi-sidebar"
version = "0.1.0"
description = "Poetry version of shinokada/fastapi-web-starter"
authors = ["Tyrn <a@b.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Tyrn/fastapi-sidebar"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
Markdown = "^3.3.4"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

